Many to Many relationship

--- a/women/templates/women/list_categories.html
+++ b/women/templates/women/list_categories.html
@@ -5,7 +5,7 @@
     <li class="selected">{{cat.name}}</li>
 
 {% else %}
-    <li><a href="{% url "category" cat.id %}">{{cat.name}}</a></li>
+    <li><a href="{% url "category" cat.slug %}">{{cat.name}}</a></li>
     
 
 {% endif %}
