--- a/women/templates/women/index.html
+++ b/women/templates/women/index.html
@@ -3,7 +3,14 @@
 {% block content %}
 <ul class="list-articles">
 	{% for p in posts %}
-			<li><h2>{{p.title}}</h2>
+		
+			<li>
+				<div class="article-panel">
+					<p class="first">Category: {{p.cat.name}}</p>
+					<p class="last">Date: {{ p.time_update|date:"d-m-Y"}}</p>
+					</div>
+				
+				<h2>{{p.title}}</h2>
     {% autoescape off %}
 	{{p.content|linebreaks|truncatewords:40}}
     {% endautoescape %}
