--- a/women/templates/women/post.html
+++ b/women/templates/women/post.html
@@ -1,14 +1,29 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
+{% block breadcrumbs %}
+<!-- Теги -->
+{% with post.tags.all as tags %}
+{% if tags %}
+<ul class="tags-list">
+    <li>Теги:</li>
+    {% for t in tags %}
+    <li><a href="{% url "tag" t.slug %}">{{t.tag}}</a></li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+{% endblock %}
 
 {% block content %}
-<h1>{{title}}</h1>
+<h1>{{post.title}}</h1>
 
 {% if post.photo %}
 <p><img class="img-article-left" src="{{post.photo.url}}"></p>
 {% endif %}
 
 {{post.content|linebreaks}}
-{% endblock content %}
+{% endblock %}
+
 
 
 
