Forms is on process of adding and completion

--- a/women/templates/women/addpage.html
+++ b/women/templates/women/addpage.html
@@ -2,11 +2,13 @@
 
 {% block content %}
     <h1>{{ title }}</h1>
-    <form action="">
-        <p><label for="id_1">Text: </label><input type="text" id="id_1" name="field_text"></p>
-        <p><label for="id_2">Check: </label><input type="checkbox" id="id_2" name="field_check"></p>
-        <p><label for="id_3">Phone Number: </label><input type="number" id="id_3" name="field_num"></p>
-        <p><label for="id_4">Password: </label><input type="password" id="id_4" name="field_psw" ></p>
+    <form action="" method="post">
+        {% csrf_token %}
+        {% for f in form %}
+        	<p><label class="form-label" for="{{ f.id_for_label }}" >{{ f.label }}</label>{{ f }}</p>
+            <div class="form-error" > {{ f.errors }} </div>
+        {% endfor %}
+
         <p><button type="submit">Send</button></p>
     </form>
 {% endblock %}
