--- a/women/templates/women/addpage.html
+++ b/women/templates/women/addpage.html
@@ -2,12 +2,14 @@
 
 {% block content %}
     <h1>{{ title }}</h1>
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% for f in form %}
         	<p><label class="form-label" for="{{ f.id_for_label }}" >{{ f.label }}</label>{{ f }}</p>
             <div class="form-error" > {{ f.errors }} </div>
         {% endfor %}
+
+
 
         <p><button type="submit">Send</button></p>
     </form>
