--- a/women/templates/women/index.html
+++ b/women/templates/women/index.html
@@ -9,6 +9,9 @@
 					<p class="first">Category: {{p.cat.name}}</p>
 					<p class="last">Date: {{ p.time_update|date:"d-m-Y"}}</p>
 					</div>
+                {% if p.photo %}
+                	<p><img class="img-article-left thumb" src="{{ p.photo.url }}" alt=""></p>
+                {% endif %} 
 				
 				<h2>{{p.title}}</h2>
     {% autoescape off %}
